manny stuff
